# idw

./: LICENSE.txt  README.md
demo/: hermes13b.txt
src/examples/: env.dist  single.py  step.py
src/lib/idw/: README.md  setup.cfg
src/lib/idw/src/idw/: __init__.py
src/lib/idw/src/idw/alpaca/: __init__.py  agent.py  prompts.py  tools.py
