[metadata]
name = idw
# version = attr: example.__version__
version = 0.0.1
author = Joe Still
author_email = joe@bios.dev
# url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = IDW lib
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT
# classifiers =
#     License :: OSI Approved :: BSD License
#     Programming Language :: Python :: 3

[options]
install_requires = langchain, google-api-python-client
package_dir=
    =src

[options.packages.find]
where=src